welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:9: error: type red is not a member of object java.awt.Color
		    setCouleurBrosse(c:Color.red)
                                             ^MethodsPicture:11: error: type blue is not a member of object java.awt.Color
		    setCouleurBrosse(c:Color.blue)
                                             ^MethodsPicture:13: error: type green is not a member of object java.awt.Color
		    setCouleurBrosse(c:Color.green)
                                             ^